@@ -1,15 +1,15 @@
 Package: lattice
-Version: 0.20-5
-Date: 2012/03/06
+Version: 0.20-6
+Date: 2012/03/10
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
 Maintainer: Deepayan Sarkar <deepayan.sarkar@r-project.org>
 Description: Lattice is a powerful and elegant high-level data
-        visualization system, with an emphasis on multivariate data,
-        that is sufficient for typical graphics needs, and is also
-        flexible enough to handle most nonstandard requirements.  See
-        ?Lattice for an introduction.
+  visualization system, with an emphasis on multivariate data, that is
+  sufficient for typical graphics needs, and is also flexible enough
+  to handle most nonstandard requirements.  See ?Lattice for an
+  introduction.
 Depends: R (>= 2.14.0)
 Suggests: grid, KernSmooth, MASS
 Imports: grid, grDevices, graphics, stats, utils, methods
@@ -18,6 +18,4 @@ LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
 URL: http://lattice.r-forge.r-project.org/
-Packaged: 2012-03-09 12:42:47 UTC; deepayan
-Repository: CRAN
-Date/Publication: 2012-03-09 14:09:23
+Packaged: 2012-03-10 09:15:43 UTC; deepayan
