@@ -1,133 +1,0 @@
-d72779236b0673f784313dc100ca16d1 *ChangeLog
-54327abe3a81c3f463751e22572ade02 *DESCRIPTION
-eb723b61539feef013de476e68b5c50a *GPL-2
-d32239bcb673463ab874e80d47fae504 *GPL-3
-82da699a39ddc36665f053c7482a1da6 *LICENSE
-7d7bfce8b0a8d0aa5c24c79397c96967 *NAMESPACE
-8d22f18414e5682d5cba65fdfc585783 *NEWS
-3c3ae89755a19a2b50b5b778b61ac4ff *R/axis.R
-d388fe9e1e0de36c65dc5b455e36de7c *R/bwplot.R
-3b7ace6c593439ff204e0b0e4a39e4d5 *R/cloud.R
-61951b849dc60405014d91484b17f361 *R/common.R
-22fdffa248a2908510383494faba0cee *R/densityplot.R
-3082f2a799d60f168bbeba37e87d4a45 *R/histogram.R
-931ae3ba194ad9419046da32d10d2a09 *R/interaction.R
-e04eb4be7df7a25ce0fabeb25fe1e561 *R/layout.R
-dee2d3079a7c4b36fd2e30ca462fc83c *R/legend.R
-9f8c9a39501ed567b189fc172d178ba4 *R/levelplot.R
-aec90deb3db94f65c3f0977d69339995 *R/make.groups.R
-ab347a54bd228e9b58ce75142e3bc18f *R/miscellaneous.R
-448c1c26d3b587a76c58836df8b2e666 *R/panel.smooth.R
-14a775d0aa3f7ae30fb8aba5c93c1484 *R/panel.smoothscatter.R
-39532a3da4d797f978487de92b249b02 *R/panel.superpose.R
-7def4de52b7749c2b9a8ac0a05cce339 *R/panels.R
-8ba6045e88590d16a7ad7f024a5c71c8 *R/parallel.R
-fa3bf9535425a56d0d851130d4ca301f *R/print.trellis.R
-e2b98df3411be11220a94c29022bfe3d *R/qq.R
-38e1d5ab53c8b4e435190c8fcf268161 *R/qqmath.R
-8bfdbdfc4533138dfb83736237982b11 *R/rfs.R
-c2006cd07f6bb3f7d6a8a1abb6e87285 *R/scales.R
-792f872de571b3fca608235c5b2a6675 *R/settings.R
-67127adfdac085f007e8f7c1202e08a6 *R/shingle.R
-9896420c2057753b855385c0ae26a707 *R/splom.R
-ec462e00ed4ed6f06ef6c3d7415d3137 *R/strip.R
-f5c8c7178bb827879815060218696269 *R/summary.trellis.R
-776bced283973b7544d7ad0b4db0064d *R/tmd.R
-aed71c041b25e9a280624999689ab277 *R/update.trellis.R
-42960cf459b4342aa24f6f523158715f *R/xyplot.R
-fecef98420b0413f537082f840c307b9 *R/xyplot.ts.R
-ee8537c5a3b5dfe6e2b0b9cb24067cfa *R/zzz.R
-8d719dfa2931678801bd0adce1c241cc *SvnLog
-d7eab80578404f30f5e7cad3eec09ffa *data/barley.rda
-db4a588a326303a2ea6dd470eb85ac85 *data/environmental.rda
-ab4a7d7b97b50eaa53b9a145552cc254 *data/ethanol.rda
-4e3e9400f0df4d28908dd121addb70c1 *data/melanoma.rda
-42df2b7a365235b1daa3f545892da553 *data/singer.rda
-5b19b9d9c6ceea57bbd416fd55f4cbbb *demo/00Index
-49b53be0f5cfbc31fdf2d1028ab66b01 *demo/intervals.R
-9ec1d932fca442660b60818b0be9c0f3 *demo/labels.R
-aeb8a42c24baed6f0918691449a49681 *demo/lattice.R
-f5e96e30c746b6c4e1dc57d13218b9e7 *demo/panel.R
-a6a64750f8d29e22e7abaf210b1dded4 *inst/CITATION
-9ae02af1139e7082b11ad339d3090c2f *inst/po/de/LC_MESSAGES/R-lattice.mo
-1c3edde22b48f789a802e0122ca6d741 *inst/po/en@quot/LC_MESSAGES/R-lattice.mo
-1aa1af72cc4e2a2bfe65ada5845f5954 *inst/po/fr/LC_MESSAGES/R-lattice.mo
-573d00ee7a36c6a4a8a83f45b55968c5 *man/Lattice.Rd
-40f3906db75059b7b0c73f544e5bd671 *man/Rows.Rd
-e7dbcdefba98238488eaf82d37f3e915 *man/axis.default.Rd
-d32fef9c6d91a0f11bfbbf748e285688 *man/banking.Rd
-5a8fe5da32d284aa737ab5bb68672b46 *man/barchart.table.Rd
-068ee2d25482864029c5b3a09adcefe7 *man/barley.Rd
-94c4c05409a368ca83b2a308aef3e6bd *man/cloud.Rd
-7093617da723db4cd9ac70bde546083d *man/draw.colorkey.Rd
-7a9f48a2dd425c447df410a2a8403f16 *man/draw.key.Rd
-23d5aa6ada174889c7ad6998304c67e1 *man/environmental.Rd
-a0837df59d69a24d7472c27b9dd4c68b *man/ethanol.Rd
-0793773c162672225aedec571e385247 *man/histogram.Rd
-36639924a81841f411a0413d5ace3146 *man/interaction.Rd
-fbdf88647a8dd8fd608ad5605847cc23 *man/lattice.options.Rd
-7852ba42b1bed6da21746fde616c5043 *man/latticeParseFormula.Rd
-06643aee5ed33e7164ee08bf33c92fec *man/level.colors.Rd
-cdcf4c7704995415b95979667d1e3471 *man/levelplot.Rd
-94eb156266865580489c9a0fad49d3d2 *man/llines.Rd
-637c4d16ebc7d78a3d198bb02f94bc30 *man/lset.Rd
-475808636848df6ceb845270fd3aa402 *man/make.groups.Rd
-f1ce7c6c1b85d44d27ae18d6d6c01dd0 *man/melanoma.Rd
-28f95db01779fb88e18fd9bc757ac4e1 *man/oneway.Rd
-44e4c575f0412e87fd81e6cd43e8f274 *man/packet.panel.default.Rd
-cfd699eefba794361bbf2836b33a4e7a *man/panel.axis.Rd
-ad572c902c1a8f150869a3545d3c5ef8 *man/panel.barchart.Rd
-3502ac7cf2616d1244b812c7f032941a *man/panel.bwplot.Rd
-58740a6597ee73839c1e984bc8ef1268 *man/panel.cloud.Rd
-92b16263f53d0866469158186f27b975 *man/panel.densityplot.Rd
-bf40296deef9af580ee4abec70d6936c *man/panel.dotplot.Rd
-32153927dac1bf180c06f86ecfe3f87e *man/panel.functions.Rd
-33c161933e0244b34d759135c89d48e9 *man/panel.histogram.Rd
-a16cdf0220dff68378f1c5196f0f8f19 *man/panel.levelplot.Rd
-ee3d36a61d0f15ce54a121a092551882 *man/panel.loess.Rd
-de9bad52e6104a1926cdd545e6693b85 *man/panel.number.Rd
-97ca7ea8dec6108233ac3c193a23cf88 *man/panel.pairs.Rd
-2b8ee171e54ec9c5c1e3d081987d2692 *man/panel.parallel.Rd
-9c2e5de40b02248dc031e1583dafd217 *man/panel.qqmath.Rd
-305b47447420e35545366145464d132b *man/panel.qqmathline.Rd
-cc91109b11d10ef84b168dc515f6a66b *man/panel.smoothScatter.Rd
-937f13a18fc84a224726faa3c54b868d *man/panel.spline.Rd
-b2ad07082bb0ec671e4a6290aabb98c2 *man/panel.stripplot.Rd
-7111eae24d35f1320ee2d98546019588 *man/panel.superpose.Rd
-bbf84d8515419329cd509f0ab22d2d75 *man/panel.violin.Rd
-b572e826fdb410aa18525fa4eca8b1f3 *man/panel.xyplot.Rd
-a365bf5225608b07982762e60f06f022 *man/prepanel.default.Rd
-4e5ceaaae8286bd7d9062867f1739c72 *man/prepanel.functions.Rd
-86622475d7d23e2e27b2a4dbc423459e *man/print.trellis.Rd
-5e596e205f32ffd6f497135fd069cb45 *man/qq.Rd
-55ebd4a5faeeb5dd4dd383710d2b1275 *man/qqmath.Rd
-946cab8bd5b934fad8f76842b1ffb8d9 *man/rfs.Rd
-e0e4bc6a77446eb9ef035efe2a61c11a *man/shingles.Rd
-a564aef967083acd8efec4425a726163 *man/simpleKey.Rd
-82a810dbc2af10045ef67c8ab08f5039 *man/simpleTheme.Rd
-19e5ab48e5f1506d30f04bf9596fbcaf *man/singer.Rd
-60418588da23d564b664d857d634400a *man/splom.Rd
-d1c1ec8933b2ecb035a9f7f15a7295e6 *man/strip.default.Rd
-54ed035586251f4c7f2a6e5380f376c1 *man/tmd.Rd
-2ee1a3df5ed3f35ef1f9339ed7ef2818 *man/trellis.device.Rd
-ac5a0b9ec9158bacc9eebc737f61c215 *man/trellis.object.Rd
-3dfa45ab1109d641777c36de8aab4b12 *man/trellis.par.get.Rd
-ce115caa3b4039ee31736e6944b6215e *man/update.trellis.Rd
-bb1565a3c0f5f1e253adb38c25a05505 *man/utilities.3d.Rd
-480ee2f24c786b35a64aba1f18a874b5 *man/xyplot.Rd
-61bc7d9f2cec3ca64a4f4c413fd31fef *man/xyplot.ts.Rd
-dddd91e8848ba319fdab35ebc18ec27b *po/R-de.po
-0137706ea41dc88fbc263c5f2ec64014 *po/R-en@quot.po
-949c9ca091003e4d9821338e4e97322b *po/R-fr.po
-06447c4134d012858b0f58cfe326db71 *po/R-lattice.pot
-e92972db59c6aa30de492fc63d8a332f *src/init.c
-918025909f36306797291250b5360243 *src/threeDplot.c
-f52b692774cf58f83a86a2269b8f699d *src/threeDplot.h
-d6fd3e5cb9518fba3a7d00a0ded921b4 *tests/MASSch04.R
-f4d056454690daa11fa91ecb5373a70c *tests/dates.R
-88c9963a80692f6d0f4a99a43582c868 *tests/dotplotscoping.R
-06b9d81d901d35c472384fa447992a3d *tests/levelplot.R
-a43899ccbd83305ed95dc64cc928aabc *tests/scales.R
-4f18dad499267b224e7256637dc32fcf *tests/temp.R
-cf74cb75182823407b4510ceff743b2d *tests/test.R
-afd9f37525396a26e114781a368fdcca *tests/wireframe.R
